# Tzcode

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  guide.txt  latest.json  set_env.md
.github/workflowers/: rust.yml
.github/workflows/: main.yml  release.yml  rust.yml
ahk/: explain-ahk.md  qk.ahk
command/: Cargo.toml  build.rs
command/src/: lib.rs  root.rs  run.rs  test.rs
command/src/c_build/: README.md
command/src/c_build/c/: example.c
command/src/commands/: README.md  apt.rs  arg.rs  code.rs  command.rs  mod.rs
command/src/env/: README.md  mod.rs
command/src/priority/: mod.rs
command/src/process/: add_task.rs  mod.rs  process.rs  thread.rs
command/src/set/: mod.rs  set.rs
command/src/signal/: mod.rs
command/src/start/: mod.rs  start_logo.rs  state_code.rs
command/src/tauri_func/: mod.rs
command/test/: explain.py  hello.html  task.list  version
ini/: setting.ini
mac_linux/: setup.sh
py/: email.py  example.py  explain.md  requirements.txt  server.py  setting.py
sh/mac_linux/: Tzcode.sh  setup.sh
sh/window/: Tzcode.bat  setup.bat
space/: explain.md  key.json  space-color.json  space.json  workspace.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: Tzcode.icns
src-tauri/src/: extension.rs  main.rs  splashscreen.rs
src-tauri/src/init/: mod.rs
src-tauri/src/page/: file.rs  mod.rs  terimal.rs
src-tauri/src/tests/: mod.rs
tiks_command/: Cargo.toml  build.rs  explain.md  hyperfine.md
tiks_command/src/: lib.rs  root.rs  run.rs  test.rs
tiks_command/src/c_build/: c-build.md
tiks_command/src/c_build/c/: example.c
tiks_command/src/commands/: README.md  apt.rs  arg.rs  code.rs  command.rs  mod.rs
tiks_command/src/env/: README.md  mod.rs
tiks_command/src/priority/: mod.rs
tiks_command/src/process/: add_task.rs  mod.rs  process.rs  thread.rs
tiks_command/src/set/: mod.rs  set.rs
tiks_command/src/signal/: mod.rs
tiks_command/src/start/: mod.rs  start_logo.rs  state_code.rs
tiks_command/src/tauri_func/: mod.rs
tiks_command/test/: explain.py  hello.html  task.list
ui/: index.html  init.html  setting.html  suggestion
ui/css/: codeEditor.css  dir.css  menu.css  style.css  terimal.css
ui/css/init/: init.css
ui/css/setting/: setting.css
ui/js/: cli.js  extension.js  file.js  get_ini.js  init_menu.js  menu.js  plugin.js  rs.js  setting.js  updater.js
window/: setup.bat
