[package]
name = "Tzcode"
version = "0.1.0"
description = "Tzdoe"
authors = ["Zhangzijie <zzj01262022@163.com>"]
repository = "https://github.com/zhangzijie-pro/Tzcode.git"
license = "MIT"
default-run = "Tzcode"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [ "fs-all", "window-all", "dialog-all"] }
lazy_static = { version = "1.4.0"}
ansi-to-html = "0.2.1"
tiks_command = { path = "../tiks_command" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
