[package]
name = "Tzcode"
version = { workspace = true }
description = "Tzdoe"
authors = ["Zhangzijie <zzj01262022@163.com>"]
repository = "https://github.com/zhangzijie-pro/Tzcode.git"
license = "MIT"
default-run = "Tzcode"
edition = "2021"
rust-version = "1.60"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [ "fs-rename-file", "window-unminimize", "dialog-open", "window-minimize", "window-unmaximize", "window-show", "window-maximize", "fs-create-dir", "window-hide", "fs-remove-dir", "dialog-save", "fs-copy-file", "window-start-dragging", "window-close", "fs-remove-file", "updater"] }
lazy_static = { version = "1.4.0"}
ansi-to-html = "0.2.1"
tiks_command = { path = "../tiks_command" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
