[package]
name = "tiks_command"
version = "1.0.4"
edition = "2021" 
authors = ["Zhangzijie <zzj01262022@163.com>"]
repository = "https://github.com/zhangzijie-pro/Tiks.git"
readme = "README.md"
description = "A Linux terminal simulator.fast!"
license = "MIT"
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "build.rs", "bin", "[*test*]"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
lazy_static = { version = "1.4.0"}
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
webbrowser = "0.8"
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"
dirs = "5.0"
rpassword = "7.3.0"
libc = "0.2.153"
base64 = "0.22.0"
rustyline = "8.0.0"
async-std = { version = "1.10", features = ["attributes"] }


[target.'cfg(not(target_os = "windows"))'.dependencies]
term_size = "0.3.0"
termion = "3.0.0"

[build]
target_name = "tiks"

[build-dependencies]
cc = "1.0"

